--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,6 +13,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+     <!-- 联网权限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
